# dz_19_2

./: .gitignore  README.md  groups.json  pyproject.toml
blog/: forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_blog_options_alter_blog_content_and_more.py  0003_alter_blog_options.py
blog/templates/blog/: blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html
catalog/: admin.py  catalog_data.json  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: load_data.py
catalog/migrations/: 0001_initial.py  0002_product_manufactured_at.py  0003_remove_product_manufactured_at.py  0004_alter_product_category.py  0005_version.py  0006_alter_product_name.py  0007_alter_product_name_alter_version_product.py  0008_product_owner.py  0009_alter_product_options_product_is_published.py
catalog/templates/catalog/: category_detail.html  category_list.html  contacts.html  home.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html
catalog/templates/includs/: inc_menu.html
catalog/templatetags/: custom_tags.py
config/: settings.py  urls.py
static/css/: styles.css
users/: forms.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_rename_avatars_users_avatar.py  0003_alter_users_phone_number.py  0004_alter_users_avatar.py  0005_users_token.py
users/templates/: login.html  profile_edit.html
users/templates/users/: login.html  user_form.html
