[tool.poetry]
name = "dz_19_2"
version = "0.1.0"
description = ""
authors = ["vitek <rgavih@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.0.6"
psycopg2-binary = "^2.9.9"  # dz_20.1
pillow = "^10.4.0"  # dz_20.1
ipython = "^8.26.0"
Tree = "^0.2.4"
pytils = "^0.4.1"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
