[tool.poetry]
name = "dz_19_2"
version = "0.1.0"
description = ""
authors = ["vitek <rgavih@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.11"
psycopg2 = { version = "2.9.9", allow-prereleases = true, extras = ["--no-binary psycopg2"] }
pillow = "^10.4.0"  # dz_20.1
ipython = "^8.26.0"
Tree = "^0.2.4"
pytils = "^0.4.1"

tree = "^0.2.4"
django = "4.2.2"
django-phonenumber-field = "^8.0.0"
django-countries = "^7.6.1"
phonenumbers = "^8.13.43"
redis = "^5.0.8"
python-dotenv = "^1.0.1"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
